@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 import com.portfolio.marketdata.client.MarketDataApiClient;
 import com.portfolio.marketdata.model.FilterType;
 import com.portfolio.marketdata.model.HistoricalDataRequest;
+import com.portfolio.marketdata.model.HistoricalDataRequest.HistoricalDataRequestBuilder;
 import com.portfolio.marketdata.model.HistoricalDataResponse;
 import com.portfolio.marketdata.model.HistoricalDataResponseWrapper;
 import com.portfolio.marketdata.model.InstrumentType;
@@ -36,142 +37,28 @@ import reactor.core.scheduler.Schedulers;
 public class MarketDataService {
 
     private final MarketDataApiClient marketDataApiClient;
-    
+
     /**
-     * Get OHLC data for the specified symbols.
+     * Convert historical data responses to market data responses.
+     * This allows analytics providers to use the same interface for both current and historical data.
      * 
-     * @param symbols List of symbols to fetch data for
-     * @param refresh Whether to refresh the data or use cached data
-     * @return Map of symbols to their respective market data
+     * @param historicalData Map of symbols to their historical data responses
+     * @return Map of symbols to their market data responses
      */
-    public Map<String, MarketData> getOhlcData(List<String> symbols, boolean refresh) {
-        log.info("Getting OHLC data for {} symbols with refresh={}", symbols.size(), refresh);
-        
-        try {
-            MarketDataResponseWrapper wrapper = marketDataApiClient.getOhlcDataSync(symbols, refresh);
-            if (wrapper == null) {
-                log.warn("Received null response wrapper from market data API");
-                return Map.of();
-            }
-            
-            Map<String, MarketDataResponse> responseData = wrapper.getData();
-            if (responseData == null) {
-                log.warn("Received null data map from market data API");
-                return Map.of();
-            }
-            
-            // Convert MarketDataResponse to MarketData
-            Map<String, MarketData> marketDataMap = new HashMap<>();
-            responseData.forEach((symbol, response) -> {
-                marketDataMap.put(symbol, MarketDataConverter.fromMarketDataResponse(response));
-            });
-            
-            return marketDataMap;
-        } catch (Exception e) {
-            log.error("Error fetching OHLC data: {}", e.getMessage(), e);
-            return Map.of();
+    public Map<String, MarketData> convertHistoricalToMarketData(Map<String, HistoricalDataResponse> historicalData) {
+        if (historicalData == null || historicalData.isEmpty()) {
+            return Collections.emptyMap();
         }
-    }
-    
-    /**
-     * Get OHLC data for the specified symbols with default refresh=true.
-     * 
-     * @param symbols List of symbols to fetch data for
-     * @return Map of symbols to their respective market data
-     */
-    public Map<String, MarketData> getOhlcData(List<String> symbols) {
-        return getOhlcData(symbols, false);
-    }
-    
-    /**
-     * Get OHLC data for the specified symbols asynchronously.
-     * 
-     * @param symbols List of symbols to fetch data for
-     * @param refresh Whether to refresh the data or use cached data
-     * @return CompletableFuture containing a map of symbols to their respective market data
-     */
-    public CompletableFuture<Map<String, MarketData>> getOhlcDataAsync(List<String> symbols, boolean refresh) {
-        log.info("Getting OHLC data asynchronously for {} symbols with refresh={}", symbols.size(), refresh);
         
-        return marketDataApiClient.getOhlcData(symbols, refresh)
-            .subscribeOn(Schedulers.boundedElastic())
-            .map(wrapper -> {
-                if (wrapper == null) {
-                    log.warn("Received null response wrapper from market data API (async)");
-                    return Map.<String, MarketData>of();
-                }
-                
-                Map<String, MarketDataResponse> responseData = wrapper.getData();
-                if (responseData == null) {
-                    log.warn("Received null data map from market data API (async)");
-                    return Map.<String, MarketData>of();
-                }
-                
-                // Convert MarketDataResponse to MarketData
-                Map<String, MarketData> marketDataMap = new HashMap<>();
-                responseData.forEach((symbol, response) -> {
-                    marketDataMap.put(symbol, MarketDataConverter.fromMarketDataResponse(response));
-                });
-                
-                return marketDataMap;
-            })
-            .onErrorResume(e -> {
-                log.error("Error fetching OHLC data asynchronously: {}", e.getMessage(), e);
-                return Mono.just(Map.<String, MarketData>of());
-            })
-            .toFuture();
-    }
-    
-    /**
-     * Get OHLC data for the specified symbols asynchronously with default refresh=true.
-     * 
-     * @param symbols List of symbols to fetch data for
-     * @return CompletableFuture containing a map of symbols to their respective market data
-     */
-    public CompletableFuture<Map<String, MarketData>> getOhlcDataAsync(List<String> symbols) {
-        return getOhlcDataAsync(symbols, true);
-    }
-    
-    /**
-     * Get the current price for a specific symbol.
-     * 
-     * @param symbol The symbol to get the price for
-     * @param refresh Whether to refresh the data or use cached data
-     * @return The current price, or null if not available
-     */
-    public Double getCurrentPrice(String symbol, boolean refresh) {
-        log.info("Getting current price for symbol: {} with refresh={}", symbol, refresh);
+        Map<String, MarketData> marketDataMap = new HashMap<>();
+        historicalData.forEach((symbol, response) -> {
+            String cleanedSymbol = cleanSymbol(symbol);
+            marketDataMap.put(cleanedSymbol, MarketDataConverter.fromHistoricalDataResponse(response));
+        });
         
-        Map<String, MarketData> data = getOhlcData(List.of(symbol), refresh);
-        MarketData marketData = data.get(symbol);
-        return marketData != null ? marketData.getLastPrice() : null;
+        return marketDataMap;
     }
-    
-    /**
-     * Get the current price for a specific symbol with default refresh=true.
-     * 
-     * @param symbol The symbol to get the price for
-     * @return The current price, or null if not available
-     */
-    public Double getCurrentPrice(String symbol) {
-        return getCurrentPrice(symbol, true);
-    }
-    
-    /**
-     * Get current prices for multiple symbols.
-     * 
-     * @param symbols List of symbols to fetch prices for
-     * @return Map of symbols to their respective current prices
-     */
-    public Map<String, Double> getCurrentPrices(List<String> symbols) {
-        Map<String, MarketData> data = getOhlcData(symbols, false);
-        return data.entrySet().stream()
-            .collect(Collectors.toMap(
-                Map.Entry::getKey,
-                entry -> entry.getValue().getLastPrice()
-            ));
-    }
-    
+
     /**
      * Get historical market data for the specified symbols with various filtering options.
      * 
@@ -180,15 +67,15 @@ public class MarketDataService {
      */
     public Map<String, MarketData> getHistoricalData(HistoricalDataRequest request) {
         
-        log.info("Getting historical data for {} symbols from {} to {} with interval={}, filterType={}", 
-                request.getSymbols().size(), request.getFromDate(), request.getToDate(), 
-                request.getTimeFrame(), request.getFilterType());
+        log.info("Getting historical data for {} from {} to {} with interval={}, filterType={}", 
+                request.getSymbols(), request.getFromDate(), request.getToDate(), 
+                request.getInterval(), request.getFilterType());
         
         try {
-            HistoricalDataResponseWrapper response = marketDataApiClient.getHistoricalDataSync(request);
+            HistoricalDataResponseWrapper response = marketDataApiClient.getHistoricalData(request).block();
             
             if (response == null || response.getData() == null) {
-                log.warn("No historical data returned for symbols: {}", String.join(",", request.getSymbols()));
+                log.warn("No historical data returned for symbols: {}", request.getSymbols());
                 return java.util.Collections.emptyMap();
             }
             
@@ -208,255 +95,169 @@ public class MarketDataService {
             return java.util.Collections.<String, MarketData>emptyMap();
         }
     }
-    
+
     /**
-     * Get historical market data for the specified symbols with default filtering options.
-     * Uses default values for instrumentType (EQ), filterType (ALL), and interval (DAY).
+     * Cleans a symbol by removing exchange prefixes like NSE:, BSE:, etc.
      * 
-     * @param symbols List of symbols to fetch historical data for
-     * @param fromDate Start date for historical data (inclusive)
-     * @param toDate End date for historical data (inclusive)
-     * @return Map of symbols to their respective market data
+     * @param symbol The symbol with potential exchange prefix
+     * @return The cleaned symbol without the exchange prefix
      */
-    public Map<String, MarketData> getHistoricalData(
-            List<String> symbols, 
-            LocalDate fromDate, 
-            LocalDate toDate) {
-        
-        return getHistoricalData(HistoricalDataRequest.builder()
-                .symbols(symbols)
-                .fromDate(fromDate)
-                .toDate(toDate)
-                .timeFrame(TimeFrame.DAY)
-                .instrumentType(InstrumentType.EQ)
-                .filterType(FilterType.ALL)
-                .build());
-    }
-    
-    /**
-     * Get historical market data for the specified symbols with various filtering options.
-     * 
-     * @param symbols List of symbols to fetch historical data for
-     * @param fromDate Start date for historical data (inclusive)
-     * @param toDate End date for historical data (inclusive)
-     * @param timeFrame Time interval for data points (e.g., DAY, FIFTEEN_MIN)
-     * @param instrumentType Instrument type (e.g., EQ for equity)
-     * @param filterType Type of filtering to apply (ALL, START_END, CUSTOM)
-     * @return Map of symbols to their respective market data
-     */
-    public Map<String, MarketData> getHistoricalData(
-            List<String> symbols, 
-            LocalDate fromDate, 
-            LocalDate toDate, 
-            TimeFrame timeFrame, 
-            InstrumentType instrumentType, 
-            FilterType filterType) {
-        
-        return getHistoricalData(HistoricalDataRequest.builder()
-                .symbols(symbols)
-                .fromDate(fromDate)
-                .toDate(toDate)
-                .timeFrame(timeFrame)
-                .instrumentType(instrumentType)
-                .filterType(filterType)
-                .build());
-    }
-    
-    /**
-     * Get historical market data for a single symbol with default filtering options.
-     * Uses default values for instrumentType (EQ), filterType (ALL), and interval (DAY).
-     * 
-     * @param symbol Symbol to fetch historical data for
-     * @param fromDate Start date for historical data (inclusive)
-     * @param toDate End date for historical data (inclusive)
-     * @return Historical data response for the symbol, or null if not found
-     */
-    public MarketData getHistoricalDataForSymbol(
-            String symbol, 
-            LocalDate fromDate, 
-            LocalDate toDate) {
-        
-        Map<String, MarketData> result = getHistoricalData(
-                Collections.singletonList(symbol), 
-                fromDate, 
-                toDate);
-        
-        return result.get(symbol);
-    }
-    
-    /**
-     * Get historical market data as MarketData objects for the specified symbols.
-     * This allows using the same interface for both current and historical market data.
-     * 
-     * @param symbols List of symbols to fetch historical data for
-     * @param fromDate Start date for historical data (inclusive)
-     * @param toDate End date for historical data (inclusive)
-     * @return Map of symbols to their respective market data
-     */
-    public Map<String, MarketData> getHistoricalMarketData(
-            List<String> symbols, 
-            LocalDate fromDate, 
-            LocalDate toDate) {
-        
-        return getHistoricalMarketData(HistoricalDataRequest.builder()
-                .symbols(symbols)
-                .fromDate(fromDate)
-                .toDate(toDate)
-                .timeFrame(TimeFrame.DAY)
-                .instrumentType(InstrumentType.EQ)
-                .filterType(FilterType.ALL)
-                .build());
-    }
-    
-    /**
-     * Get historical market data as MarketData objects with various filtering options.
-     * 
-     * @param request The historical data request with all parameters
-     * @return Map of symbols to their respective market data
-     */
-    public Map<String, MarketData> getHistoricalMarketData(HistoricalDataRequest request) {
-        // Since getHistoricalData now directly returns MarketData, we can just call it
-        return getHistoricalData(request);
-    }
-    
-    /**
-     * Convert historical data responses to market data responses.
-     * This allows analytics providers to use the same interface for both current and historical data.
-     * 
-     * @param historicalData Map of symbols to their historical data responses
-     * @return Map of symbols to their market data responses
-     */
-    public Map<String, MarketData> convertHistoricalToMarketData(Map<String, HistoricalDataResponse> historicalData) {
-        if (historicalData == null || historicalData.isEmpty()) {
-            return Collections.emptyMap();
+    private String cleanSymbol(String symbol) {
+        if (symbol == null || symbol.isEmpty()) {
+            return symbol;
         }
         
+        // Check for exchange prefix pattern (like NSE:, BSE:, etc.)
+        int colonIndex = symbol.indexOf(':');
+        if (colonIndex > 0 && colonIndex < symbol.length() - 1) {
+            return symbol.substring(colonIndex + 1);
+        }
+        
+        return symbol;
+    }
+    
+    private Map<String, MarketData> convertToMarketDataMap(MarketDataResponseWrapper wrapper, boolean isAsync) {
+        if (wrapper == null) {
+            log.warn("Received null response wrapper from market data API {}", isAsync ? "(async)" : "");
+            return Map.of();
+        }
+        
+        Map<String, MarketDataResponse> responseData = wrapper.getData();
+        if (responseData == null) {
+            log.warn("Received null data map from market data API {}", isAsync ? "(async)" : "");
+            return Map.of();
+        }
+        
+        // Convert MarketDataResponse to MarketData
         Map<String, MarketData> marketDataMap = new HashMap<>();
-        historicalData.forEach((symbol, response) -> {
-            marketDataMap.put(symbol, MarketDataConverter.fromHistoricalDataResponse(response));
+        responseData.forEach((symbol, response) -> {
+            String cleanedSymbol = cleanSymbol(symbol);
+            marketDataMap.put(cleanedSymbol, MarketDataConverter.fromMarketDataResponse(response));
         });
         
         return marketDataMap;
     }
     
     /**
-     * Get historical market data for a single symbol with various filtering options.
+     * Get OHLC data for the specified symbols.
      * 
-     * @param symbol Symbol to fetch historical data for
+     * @param symbols List of symbols to fetch data for
+     * @param refresh Whether to refresh the data or use cached data
+     * @return Map of symbols to their respective market data
+     */
+    public Map<String, MarketData> getOhlcData(List<String> symbols, boolean refresh) {
+        log.info("Getting OHLC data for {} symbols with refresh={}", symbols.size(), refresh);
+        
+        try {
+            MarketDataResponseWrapper wrapper = marketDataApiClient.getOhlcData(symbols, TimeFrame.FIVE_MIN.getValue(), refresh).block();
+            return convertToMarketDataMap(wrapper, false);
+        } catch (Exception e) {
+            log.error("Error fetching OHLC data: {}", e.getMessage(), e);
+            return Map.of();
+        }
+    }
+    
+    
+    /**
+     * Get OHLC data for the specified symbols asynchronously.
+     * 
+     * @param symbols List of symbols to fetch data for
+     * @param refresh Whether to refresh the data or use cached data
+     * @return CompletableFuture containing a map of symbols to their respective market data
+     */
+    public CompletableFuture<Map<String, MarketData>> getOhlcDataAsync(List<String> symbols, boolean refresh) {
+        log.info("Getting OHLC data asynchronously for {} symbols with refresh={}", symbols.size(), refresh);
+        
+        return marketDataApiClient.getOhlcData(symbols, TimeFrame.FIVE_MIN.getValue(), refresh)
+            .subscribeOn(Schedulers.boundedElastic())
+            .map(wrapper -> convertToMarketDataMap(wrapper, true))
+            .onErrorResume(e -> {
+                log.error("Error fetching OHLC data asynchronously: {}", e.getMessage(), e);
+                return Mono.just(Map.of());
+            })
+            .toFuture();
+    }
+    
+    /**
+     * Get current prices for multiple symbols.
+     * 
+     * @param symbols List of symbols to fetch prices for
+     * @return Map of symbols to their respective current prices
+     */
+    public Map<String, Double> getCurrentPrices(List<String> symbols) {
+        Map<String, MarketData> data = getOhlcData(symbols, false);
+        return data.entrySet().stream()
+            .collect(Collectors.toMap(
+                Map.Entry::getKey,
+                entry -> entry.getValue().getLastPrice()
+            ));
+    }
+
+    /**
+     * Get historical market data for the specified symbols with various filtering options.
+     * This is the main method for retrieving historical data with all possible parameters.
+     * 
+     * @param symbols List of symbols to fetch historical data for
      * @param fromDate Start date for historical data (inclusive)
      * @param toDate End date for historical data (inclusive)
-     * @param timeFrame Time interval for data points (e.g., DAY, FIFTEEN_MIN)
-     * @param instrumentType Instrument type (e.g., EQ for equity)
-     * @param filterType Type of filtering to apply (ALL, START_END, CUSTOM)
+     * @param timeFrame Time interval for data points (e.g., DAY, FIFTEEN_MIN), defaults to DAY if null
+     * @param instrumentType Instrument type (e.g., STOCK for equity), defaults to STOCK if null
+     * @param filterType Type of filtering to apply (ALL, START_END, CUSTOM), defaults to ALL if null
      * @param filterFrequency Frequency for CUSTOM filtering (required when filterType is CUSTOM)
-     * @param continuous Whether to use continuous data (optional)
-     * @return Historical data response for the symbol, or null if not found
+     * @param continuous Whether to use continuous data
+     * @param forceRefresh Whether to force refresh the data instead of using cache
+     * @return Map of symbols to their respective market data
      */
-    public MarketData getHistoricalDataForSymbol(
-            String symbol, 
+    public Map<String, MarketData> getHistoricalData(
+            List<String> symbols, 
             LocalDate fromDate, 
             LocalDate toDate, 
             TimeFrame timeFrame, 
             InstrumentType instrumentType, 
-            FilterType filterType, 
+            FilterType filterType,
             Integer filterFrequency,
-            Boolean continuous) {
+            Boolean continuous,
+            Boolean forceRefresh) {
+        
+        // Set default values if parameters are null
+        TimeFrame tf = timeFrame != null ? timeFrame : TimeFrame.DAY;
+        InstrumentType it = instrumentType != null ? instrumentType : InstrumentType.STOCK;
+        FilterType ft = filterType != null ? filterType : FilterType.ALL;
         
         HistoricalDataRequest request = HistoricalDataRequest.builder()
-                .symbols(java.util.Collections.singletonList(symbol))
+                .symbols(String.join(",", symbols))
                 .fromDate(fromDate)
                 .toDate(toDate)
-                .timeFrame(timeFrame)
-                .instrumentType(instrumentType)
-                .filterType(filterType)
-                .filterFrequency(filterFrequency)
-                .continuous(continuous)
+                .interval(tf.getValue())
+                .instrumentType(it.getValue())
+                .filterType(ft.getValue())
                 .build();
-        
-        Map<String, MarketData> dataMap = getHistoricalData(request);
-        
-        return dataMap.get(symbol);
-    }
-    
-    /**
-     * Get historical market data as MarketData objects asynchronously.
-     * 
-     * @param symbols List of symbols to fetch historical data for
-     * @param fromDate Start date for historical data (inclusive)
-     * @param toDate End date for historical data (inclusive)
-     * @return CompletableFuture containing a map of symbols to their respective market data
-     */
-    public CompletableFuture<Map<String, MarketData>> getHistoricalMarketDataAsync(
-            List<String> symbols, 
-            LocalDate fromDate, 
-            LocalDate toDate) {
-        
-        return getHistoricalMarketDataAsync(HistoricalDataRequest.builder()
-                .symbols(symbols)
-                .fromDate(fromDate)
-                .toDate(toDate)
-                .timeFrame(TimeFrame.DAY)
-                .instrumentType(InstrumentType.EQ)
-                .filterType(FilterType.ALL)
-                .build());
-    }
-    
-    /**
-     * Get historical market data as MarketData objects asynchronously with various filtering options.
-     * 
-     * @param request The historical data request with all parameters
-     * @return CompletableFuture containing a map of symbols to their respective market data
-     */
-    public CompletableFuture<Map<String, MarketData>> getHistoricalMarketDataAsync(HistoricalDataRequest request) {
-        
-        log.info("Getting historical data asynchronously for {} symbols from {} to {} with interval={}, filterType={}", 
-                request.getSymbols().size(), request.getFromDate(), request.getToDate(), 
-                request.getTimeFrame(), request.getFilterType());
-        
-        return marketDataApiClient.getHistoricalData(request)
-                .subscribeOn(Schedulers.boundedElastic())
-                .map(wrapper -> {
-                    if (wrapper == null || wrapper.getData() == null) {
-                        log.warn("No historical data returned for symbols: {}", String.join(",", request.getSymbols()));
-                        return Collections.<String, MarketData>emptyMap();
-                    }
+                
+        if (filterFrequency != null || continuous != null || forceRefresh != null) {
+            HistoricalDataRequestBuilder builder = HistoricalDataRequest.builder()
+                    .symbols(request.getSymbols())
+                    .fromDate(request.getFromDate())
+                    .toDate(request.getToDate())
+                    .interval(request.getInterval())
+                    .instrumentType(request.getInstrumentType())
+                    .filterType(request.getFilterType());
                     
-                    Map<String, HistoricalDataResponse> data = wrapper.getData();
-                    return convertHistoricalToMarketData(data);
-                })
-                .onErrorResume(e -> {
-                    log.error("Error fetching historical data asynchronously: {}", e.getMessage(), e);
-                    return Mono.just(Collections.<String, MarketData>emptyMap());
-                })
-                .toFuture();
-    }
-    
-
-    
-    /**
-     * Get historical market data for the specified symbols asynchronously.
-     * 
-     * @param symbols List of symbols to fetch historical data for
-     * @param fromDate Start date for historical data (inclusive)
-     * @param toDate End date for historical data (inclusive)
-     * @param timeFrame Time interval for data points (e.g., DAY, FIFTEEN_MIN)
-     * @param instrumentType Instrument type (e.g., EQ for equity)
-     * @param filterType Type of filtering to apply (ALL, START_END, CUSTOM)
-     * @param filterFrequency Frequency for CUSTOM filtering (required when filterType is CUSTOM)
-     * @param continuous Whether to use continuous data (optional)
-     * @return CompletableFuture containing a map of symbols to their respective market data
-     */
-    public CompletableFuture<Map<String, MarketData>> getHistoricalDataAsync(HistoricalDataRequest request) {
+            if (filterFrequency != null) {
+                builder.filterFrequency(filterFrequency);
+            }
+            
+            if (continuous != null) {
+                builder.continuous(continuous);
+            }
+            
+            if (forceRefresh != null) {
+                builder.forceRefresh(forceRefresh);
+            }
+            
+            request = builder.build();
+        }
         
-        return getHistoricalDataAsync(HistoricalDataRequest.builder()
-                .symbols(request.getSymbols())
-                .fromDate(request.getFromDate())
-                .toDate(request.getToDate())
-                .timeFrame(request.getTimeFrame())
-                .instrumentType(request.getInstrumentType())
-                .filterType(request.getFilterType())
-                .filterFrequency(request.getFilterFrequency())
-                .continuous(request.getContinuous())
-                .build());
+        return getHistoricalData(request);
     }
+
 }
